fixed pop map on mobile

--- a/src/app/pages/peering/peering-landingpage/peering-landingpage.component.scss
+++ b/src/app/pages/peering/peering-landingpage/peering-landingpage.component.scss
@@ -72,6 +72,11 @@ img {
   grid-template-columns: 1fr auto;
   grid-template-rows: auto 1fr;
 
+  @media screen and (max-width: #{$bp-mobile - 1}) {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto auto;
+  }
+
   div {
     display: flex;
     flex-direction: column;
@@ -101,9 +106,12 @@ img {
 
 .map {
   display: flex;
-  grid-column-start: 2;
-  grid-row-start: 1;
-  grid-row-end: 3;
+
+  @media (min-width: #{$bp-mobile}) {
+    grid-column-start: 2;
+    grid-row-start: 1;
+    grid-row-end: 3;
+  }
+
   max-width: 500px;
 }
-
